Bug fix & better Unit Test
Bug clear and test file:

+ Fixed the bug where "Contents not responsive with the navigation bar when extend / unextend when clicked on the 'menu' icon."

+ Adding more features in the "Navigation Bar" test file for better bug fix.

Known bugs:

+ Animation when clicked on the 'menu' icon again after click on it first time is not right. It suddenly move back, rather than slowly slide back.

--- a/Test/NavigationBar/SideBar/style.css
+++ b/Test/NavigationBar/SideBar/style.css
@@ -197,11 +197,20 @@ nav.active-button ul li .small-navigation-links {
     padding: .7rem;
 }
 
-
-.box-1 {
-    background-color: pink;
+.box-containers {
+    /* border: 3px solid orange; */
+    background-color: lightcoral;
+    margin-bottom: 1rem;
 }
 
-.box-2 {
-    background-color: blue;
+.box {
+    display: flex;
+    justify-content: center;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+.context {
+    padding: 1rem 0;
+    font-size: 1rem;
 }
